Adicionando o botão de carregar mais

--- a/index.html
+++ b/index.html
@@ -947,7 +947,7 @@
                     <div id="todos2" class="tab-pane">
 
                         <div class="d-lg-flex row">
-                            <div class="col-lg-4 p-3">
+                            <div class="col-lg-4 p-3 box">
                                 <div class="card w-100">
                                     <img src="/images/montanha.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
@@ -964,7 +964,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-4 p-3">
+                            <div class="col-lg-4 p-3 box">
                                 <div class="card w-100">
                                     <img src="/images/beach.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
@@ -981,7 +981,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-4 p-3">
+                            <div class="col-lg-4 p-3 box">
                                 <div class="card w-100">
                                     <img src="/images/neve.png" class="card-img-top" alt="...">
                                     <div class="card-body">
@@ -998,7 +998,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-4 p-3">
+                            <div class="col-lg-4 p-3 box">
                                 <div class="card w-100">
                                     <img src="/images/cachoeira.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
@@ -1016,7 +1016,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-lg-4 p-3">
+                            <div class="col-lg-4 p-3 box">
                                 <div class="card w-100">
                                     <img src="/images/montanha.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
@@ -1033,7 +1033,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-4 p-3">
+                            <div class="col-lg-4 p-3 box">
                                 <div class="card w-100">
                                     <img src="/images/beach.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
@@ -1050,7 +1050,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-4 p-3">
+                            <div class="col-lg-4 p-3 box">
                                 <div class="card w-100">
                                     <img src="/images/neve.png" class="card-img-top" alt="...">
                                     <div class="card-body">
@@ -1067,7 +1067,24 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-4 p-3">
+                            <div class="col-lg-4 p-3 box">
+                                <div class="card w-100">
+                                    <img src="/images/cachoeira.jpg" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <div class="d-flex align-items-center justify-content-between">
+                                            <h5 class="card-title">Nome da cachoeira</h5>
+                                            <div class="color_laranja">
+                                                <i class="bi bi-star-fill"></i>
+                                                <span class="ms-2">4.5</span>
+                                            </div>
+                                        </div>
+                                        <p class="card-text color_blue">
+                                            <i class="bi bi-geo-alt"></i> Onde fica a cachoeira
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 p-3 box">
                                 <div class="card w-100">
                                     <img src="/images/cachoeira.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
@@ -1085,7 +1102,9 @@
                                 </div>
                             </div>
                         </div>
-
+                        <div class="row mt-5 d-flex justify-content-center">
+                            <button id="btn-load" type="button" class="btn btn-primary">Carregar mais</button>
+                        </div>
                     </div>
 
                 </div>
@@ -1166,21 +1185,21 @@
 
     <section class="pt-5 pb-5 mt-5">
         <div class="container">
-            <div class="row">
+            <div class="row text-center">
                 <div class="col">
-                    <img class="d-block w-100" src="https://via.placeholder.com/20x10" alt="">
+                    <img class="d-block w-100" src="https://via.placeholder.com/200x200" alt="">
                 </div>
                 <div class="col">
-                    <img class="d-block w-100" src="https://via.placeholder.com/20x10" alt="">
+                    <img class="d-block w-100" src="https://via.placeholder.com/200x200" alt="">
                 </div>
                 <div class="col">
-                    <img class="d-block w-100" src="https://via.placeholder.com/20x10" alt="">
+                    <img class="d-block w-100" src="https://via.placeholder.com/200x200" alt="">
                 </div>
                 <div class="col">
-                    <img class="d-block w-100" src="https://via.placeholder.com/20x10" alt="">
+                    <img class="d-block w-100" src="https://via.placeholder.com/200x200" alt="">
                 </div>
                 <div class="col">
-                    <img class="d-block w-100" src="https://via.placeholder.com/20x10" alt="">
+                    <img class="d-block w-100" src="https://via.placeholder.com/200x200" alt="">
                 </div>
             </div>
         </div>
