--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/images/aviao.png" type="image/png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -23,9 +24,9 @@
 
             <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
                 <li><a href="#" class="nav-link px-2 text-dark active">Home</a></li>
-                <li><a href="#" class="nav-link px-2 text-dark">Category</a></li>
+                <li><a href="#" class="nav-link px-2 text-dark">Categoria</a></li>
                 <li><a href="#" class="nav-link px-2 text-dark">Blog</a></li>
-                <li><a href="#" class="nav-link px-2 text-dark">About Us</a></li>
+                <li><a href="#" class="nav-link px-2 text-dark">Sobre</a></li>
             </ul>
 
             <div class="col-md-3 text-end">
@@ -39,7 +40,7 @@
             <div class="row">
                 <div class="col-lg-8">
                     <h1 class="fw-bold subtitulo">Explore</h1>
-                    <h1 class="fw-bold titulo">Beautiful <i class="bi bi-stars"></i></h1>
+                    <h1 class="fw-bold titulo">Beautiful<i class="bi bi-stars"></i></h1>
                     <h1 class="fw-bold subtitulo">World!</h1>
                 </div>
                 <div class="col-lg-4">
@@ -62,7 +63,7 @@
                             <p>São Paulo <i class="bi bi-chevron-down fw-bold color_blue"></i></p>
                         </li>
                         <li class="hero_search">
-                            <a class="nav-link" href="#">search</a>
+                            <a class="nav-link" href="#">Buscar</a>
                         </li>
                     </ul>
                 </div>
@@ -75,7 +76,7 @@
 
             <div
                 class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4">
-                <h1 class="fw-bold fs-1">Popular Place</h1>
+                <h1 class="fw-bold fs-1">Lugares Populares</h1>
                 <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
                     <li>
                         <a href="#" data-bs-toggle="tab" data-bs-target="#praia"
@@ -338,23 +339,6 @@
                         <div class="d-lg-flex row">
                             <div class="col-lg-4 p-3">
                                 <div class="card w-100">
-                                    <img src="/images/montanha.jpg" class="card-img-top" alt="...">
-                                    <div class="card-body">
-                                        <div class="d-flex align-items-center justify-content-between">
-                                            <h5 class="card-title">Nome montanhas</h5>
-                                            <div class="color_laranja">
-                                                <i class="bi bi-star-fill"></i>
-                                                <span class="ms-2">4.5</span>
-                                            </div>
-                                        </div>
-                                        <p class="card-text color_blue">
-                                            <i class="bi bi-geo-alt"></i> Onde fica a montanha
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-4 p-3">
-                                <div class="card w-100">
                                     <img src="/images/beach.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
                                         <div class="d-flex align-items-center justify-content-between">
@@ -419,7 +403,19 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 mb-5">
-                    <img class="w-100 d-block" src="/images/explore.jpg" alt="">
+                    <div class="wrapper">
+                        <div class="images">
+                            <div class="img-1"></div>
+                            <div class="img-2"></div>
+                        </div>
+                        <div class="slider">
+                            <div class="drag-line">
+                                <span></span>
+                            </div>
+                            <input type="range" min="0" max="100" value="50">
+                        </div>
+                    </div>
+
                 </div>
                 <div class="col-lg-6">
                     <h1 class="fw-bold fs-1">Explore todos os cantos do mundo conosco</h1>
@@ -451,7 +447,7 @@
                             <div class="border me-2 color_laranja fw-bold">
                                 <i class="bi bi-cart4 fs-1"></i>
                             </div>
-                            <strong class="fs-4">Food</strong>
+                            <strong class="fs-4">Comida</strong>
                         </div>
 
                     </div>
@@ -465,7 +461,7 @@
 
             <div
                 class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4">
-                <h1 class="fw-bold fs-1">Explore Place</h1>
+                <h1 class="fw-bold fs-1">Explore Lugares</h1>
                 <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
                     <li>
                         <a href="#" data-bs-toggle="tab" data-bs-target="#praia2"
@@ -1101,17 +1097,67 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="col-lg-4 p-3 box">
+                                <div class="card w-100">
+                                    <img src="/images/montanha.jpg" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <div class="d-flex align-items-center justify-content-between">
+                                            <h5 class="card-title">Nome montanhas</h5>
+                                            <div class="color_laranja">
+                                                <i class="bi bi-star-fill"></i>
+                                                <span class="ms-2">4.5</span>
+                                            </div>
+                                        </div>
+                                        <p class="card-text color_blue">
+                                            <i class="bi bi-geo-alt"></i> Onde fica a montanha
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 p-3 box">
+                                <div class="card w-100">
+                                    <img src="/images/cachoeira.jpg" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <div class="d-flex align-items-center justify-content-between">
+                                            <h5 class="card-title">Nome da cachoeira</h5>
+                                            <div class="color_laranja">
+                                                <i class="bi bi-star-fill"></i>
+                                                <span class="ms-2">4.5</span>
+                                            </div>
+                                        </div>
+                                        <p class="card-text color_blue">
+                                            <i class="bi bi-geo-alt"></i> Onde fica a cachoeira
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 p-3 box">
+                                <div class="card w-100">
+                                    <img src="/images/beach.jpg" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <div class="d-flex align-items-center justify-content-between">
+                                            <h5 class="card-title">Nome da praia</h5>
+                                            <div class="color_laranja">
+                                                <i class="bi bi-star-fill"></i>
+                                                <span class="ms-2">4.5</span>
+                                            </div>
+                                        </div>
+                                        <p class="card-text color_blue">
+                                            <i class="bi bi-geo-alt"></i> Recife - BH
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row mt-5 d-flex justify-content-center">
+                                <button id="btn-load" type="button" class="btn btn-primary">Carregar mais</button>
+                            </div>
                         </div>
-                        <div class="row mt-5 d-flex justify-content-center">
-                            <button id="btn-load" type="button" class="btn btn-primary">Carregar mais</button>
-                        </div>
+
                     </div>
 
                 </div>
 
             </div>
-
-        </div>
     </section>
 
     <section class="pt-5 pb-5 mt-5">
@@ -1142,7 +1188,7 @@
             <div class="row">
                 <div class="d-flex flex-wrap align-items-center justify-content-between mb-4">
                     <div class="d-flex align-items-end flex-wrap">
-                        <h1 class="fw-bold fs-1 me-3">Our Gallery</h1>
+                        <h1 class="fw-bold fs-1 me-3">Nossa Galeria</h1>
                         <p class="m-0">~ Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                     <a class="nav-link color_laranja" href="#">Veja todas</a>
@@ -1183,23 +1229,25 @@
         </div>
     </section>
 
-    <section class="pt-5 pb-5 mt-5">
+    <section class="parceiros pt-5 pb-5 mt-5">
         <div class="container">
-            <div class="row text-center">
-                <div class="col">
-                    <img class="d-block w-100" src="https://via.placeholder.com/200x200" alt="">
-                </div>
-                <div class="col">
-                    <img class="d-block w-100" src="https://via.placeholder.com/200x200" alt="">
-                </div>
-                <div class="col">
-                    <img class="d-block w-100" src="https://via.placeholder.com/200x200" alt="">
-                </div>
-                <div class="col">
-                    <img class="d-block w-100" src="https://via.placeholder.com/200x200" alt="">
-                </div>
-                <div class="col">
-                    <img class="d-block w-100" src="https://via.placeholder.com/200x200" alt="">
+            <div class="row">
+                <div class="wrapper">
+                    <div class="item item1">
+                        <img class="d-block w-100" src="https://via.placeholder.com/200x200" alt="">
+                    </div>
+                    <div class="item item2">
+                        <img class="d-block w-100" src="https://via.placeholder.com/200x200" alt="">
+                    </div>
+                    <div class="item item3">
+                        <img class="d-block w-100" src="https://via.placeholder.com/200x200" alt="">
+                    </div>
+                    <div class="item item4">
+                        <img class="d-block w-100" src="https://via.placeholder.com/200x200" alt="">
+                    </div>
+                    <div class="item item5">
+                        <img class="d-block w-100" src="https://via.placeholder.com/200x200" alt="">
+                    </div>
                 </div>
             </div>
         </div>
@@ -1208,10 +1256,10 @@
     <section class="busca pt-5 pb-5 mt-5">
         <div class="container">
             <div class="row text-center">
-                <h1 class="fw-bold fs-1">Sing up to our newsietter</h1>
+                <h1 class="fw-bold fs-1">Inscreva-se em nosso boletim informativo</h1>
                 <div class="busca-email mt-5 input-group">
                     <input class="form-control" type="text" placeholder="Digite seu email">
-                    <button class="btn btn-busca">Search</button>
+                    <button class="btn btn-busca">Buscar</button>
                 </div>
             </div>
         </div>
@@ -1249,21 +1297,21 @@
                     </div>
                 </div>
                 <div class="col-lg-3 mb-3">
-                    <h2 class="fw-bold fs-2">Quick Link</h2>
+                    <h2 class="fw-bold fs-2">Link rápido</h2>
                     <ul class="p-0">
                         <li class="mb-3"><a class="nav-link" href="#">Home</a></li>
-                        <li class="mb-3"><a class="nav-link" href="#">Category</a></li>
+                        <li class="mb-3"><a class="nav-link" href="#">Categoria</a></li>
                         <li class="mb-3"><a class="nav-link" href="#">Blog</a></li>
-                        <li class="mb-3"><a class="nav-link" href="#">About us</a></li>
+                        <li class="mb-3"><a class="nav-link" href="#">Sobre</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 mb-3">
-                    <h2 class="fw-bold fs-2">Quick Link</h2>
+                    <h2 class="fw-bold fs-2">Link rápido</h2>
                     <ul class="p-0">
                         <li class="mb-3"><a class="nav-link" href="#">FAQ'S</a></li>
-                        <li class="mb-3"><a class="nav-link" href="#">Privacy Policy</a></li>
-                        <li class="mb-3"><a class="nav-link" href="#">Term & Condicions</a></li>
-                        <li class="mb-3"><a class="nav-link" href="#">Support</a></li>
+                        <li class="mb-3"><a class="nav-link" href="#">Política de Privacidade</a></li>
+                        <li class="mb-3"><a class="nav-link" href="#">Termo & Condições</a></li>
+                        <li class="mb-3"><a class="nav-link" href="#">Suporte</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 mb-3">
