--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/images/aviao.png" type="image/png">
+    <link rel="icon" href="/images/mala.png" type="image/png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="/styles/styles.css">
-    <title>Viagem</title>
+    <title>Site de viagem</title>
 </head>
 
 <body>
@@ -1233,21 +1233,31 @@
         <div class="container">
             <div class="row">
                 <div class="wrapper">
-                    <div class="item item1">
-                        <img class="d-block w-100" src="https://via.placeholder.com/200x200" alt="">
-                    </div>
-                    <div class="item item2">
-                        <img class="d-block w-100" src="https://via.placeholder.com/200x200" alt="">
-                    </div>
-                    <div class="item item3">
-                        <img class="d-block w-100" src="https://via.placeholder.com/200x200" alt="">
-                    </div>
-                    <div class="item item4">
-                        <img class="d-block w-100" src="https://via.placeholder.com/200x200" alt="">
-                    </div>
-                    <div class="item item5">
-                        <img class="d-block w-100" src="https://via.placeholder.com/200x200" alt="">
-                    </div>
+                    <a href="#">
+                        <div class="item item1">
+                            <p class="fw-bold fs-3"><i class="bi bi-backpack2"></i> Parceiro 01</p>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="item item2">
+                            <p class="fw-bold fs-3"><i class="bi bi-backpack2"></i> Parceiro 02</p>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="item item3">
+                            <p class="fw-bold fs-3"><i class="bi bi-backpack2"></i> Parceiro 03</p>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="item item4">
+                            <p class="fw-bold fs-3"><i class="bi bi-backpack2"></i> Parceiro 04</p>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="item item5">
+                            <p class="fw-bold fs-3"><i class="bi bi-backpack2"></i> Parceiro 05</p>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
@@ -1316,15 +1326,15 @@
                 </div>
                 <div class="col-lg-3 mb-3">
                     <h2 class="fw-bold fs-2">Entre em contato</h2>
-                    <div class="d-flex align-items-center">
+                    <div class="d-flex align-items-center entre_em_contanto">
                         <i class="bi bi-geo-alt me-3 color_laranja fs-4"></i>
                         <p class="m-0">123 Rua qualquer, São Paulo - SP</p>
                     </div>
-                    <div class="d-flex align-items-center">
+                    <div class="d-flex align-items-center entre_em_contanto">
                         <i class="bi bi-telephone me-3 color_laranja fs-4"></i>
                         <p class="m-0">(01) 23456-7890</p>
                     </div>
-                    <div class="d-flex align-items-center">
+                    <div class="d-flex align-items-center entre_em_contanto">
                         <i class="bi bi-envelope me-3 color_laranja fs-4"></i>
                         <p class="m-0">emaildecontato@gmail.com</p>
                     </div>
