--- a/index.html
+++ b/index.html
@@ -14,26 +14,51 @@
 
 <body>
 
-    <div class="container">
-        <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4">
-            <div class="col-md-3 mb-2 mb-md-0">
-                <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none fw-bold fs-2">
-                    Logo
-                </a>
+    <nav class="navbar navbar-expand-lg container">
+        <div class="container-fluid">
+            <div class="col-md-4">
+                <a class="navbar-brand fw-bold fs-2" href="#">Logo</a>
             </div>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-            <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-                <li><a href="#" class="nav-link px-2 text-dark active">Home</a></li>
-                <li><a href="#" class="nav-link px-2 text-dark">Categoria</a></li>
-                <li><a href="#" class="nav-link px-2 text-dark">Blog</a></li>
-                <li><a href="#" class="nav-link px-2 text-dark">Sobre</a></li>
-            </ul>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li><a href="#" class="nav-link text-dark active">Home</a></li>
+                    <li><a href="#" class="nav-link text-dark">Categoria</a></li>
+                    <li><a href="#" class="nav-link text-dark">Blog</a></li>
+                    <li><a href="#" class="nav-link text-dark">Sobre</a></li>
+                </ul>
 
-            <div class="col-md-3 text-end">
-                <button type="button" class="btn btn-nav">Login</button>
+                <div class="col-md-4">
+                    <button type="button" class="btn btn-nav">Cadastre-se</button>
+                </div>
             </div>
-        </header>
-    </div>
+        </div>
+    </nav>
+
+    <!-- <nav class="navbar navbar-expand-lg container">
+        <div class="container-fluid">
+            <a class="navbar-brand fw-bold fs-2" href="#">Logo</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li><a href="#" class="nav-link px-2 text-dark active">Home</a></li>
+                    <li><a href="#" class="nav-link px-2 text-dark">Categoria</a></li>
+                    <li><a href="#" class="nav-link px-2 text-dark">Blog</a></li>
+                    <li><a href="#" class="nav-link px-2 text-dark">Sobre</a></li>
+                </ul>
+                <button type="button" class="btn btn-nav">Cadastre-se</button>
+            </div>
+        </div>
+    </nav> -->
 
     <section class="hero pt-5 pb-5 mb-5">
         <div class="container">
@@ -1160,23 +1185,23 @@
             </div>
     </section>
 
-    <section class="pt-5 pb-5 mt-5">
+    <section id="info" class="pt-5 pb-5 mt-5">
         <div class="container">
             <div class="row text-center">
                 <div class="col border rounded m-3 p-5">
-                    <h1 class="fw-bold fs-1 color_laranja">24+</h1>
+                    <h1 class="fw-bold fs-1 color_laranja num" data-count="24">000</h1>
                     <p class="fw-bold">Cidades</p>
                 </div>
                 <div class="col border rounded m-3 p-5">
-                    <h1 class="fw-bold fs-1 color_laranja">700+</h1>
+                    <h1 class="fw-bold fs-1 color_laranja num" data-count="700">000</h1>
                     <p class="fw-bold">Lugares</p>
                 </div>
                 <div class="col border rounded m-3 p-5">
-                    <h1 class="fw-bold fs-1 color_laranja">200+</h1>
+                    <h1 class="fw-bold fs-1 color_laranja num" data-count="200">000</h1>
                     <p class="fw-bold">Hotel</p>
                 </div>
                 <div class="col border rounded m-3 p-5">
-                    <h1 class="fw-bold fs-1 color_laranja">2k+</h1>
+                    <h1 class="fw-bold fs-1 color_laranja num" data-count="2000">000</h1>
                     <p class="fw-bold">Review</p>
                 </div>
             </div>
